feat: update CORS configuration and change API base URL to production

--- a/trophy-fullstack-frontend/.env
+++ b/trophy-fullstack-frontend/.env
@@ -1,1 +1,3 @@
-VITE_API_BASE_URL=http://localhost:4000/api
+VITE_API_BASE_URL=https://memorise.narithookilautospa.com
+
+{product_id: [Sigtron40:4C:CA:45:A8:34], startTime: 04:03:00, endTime: 07:05:00, controls: Instance of 'Controls', day: [1], type: group, schedule_name: My sample schedule, subspace_id: 68a01fc7d85d036dde1ad25f}
